[FLS-189] add margins to solve header logo overlaps on the elements

--- a/lms/static/sass/blocks/_login-register.scss
+++ b/lms/static/sass/blocks/_login-register.scss
@@ -1,5 +1,6 @@
 .login-register-content {
 	background: none;
+	margin-top: 48px;
 
 	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 		display: block;
